--- a/index.html
+++ b/index.html
@@ -11,47 +11,50 @@
 
 <div class=title>
     <h1 align=center>
-        Anton Sugolov
+        sugolov.github.io
     </h1>
     <p align=center>
-        anton.sugolov[at]mail.utoronto.ca
-        <br>
-        <a href="https://github.com/sugolov/">GitHub</a>, <a
-            href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a>,
-        <a href="files/AntonSugolov_CV.pdf">Curriculum Vitae</a>
-        <br>
         <i>Toronto, Ontario</i>
     </p>
 </div>
 
 <div class="topnav">
-    <a class="active" href="index.html">About</a>
-    <a href="courses.html">Courses</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
     <a href="personal.html">Blog</a>
     <a href="contact.html">Contact</a>
 </div>
 
-<h2>About Me</h2>
-<p>
-    I'm a second year Mathematics and Statistics student at the University of Toronto. I am pursuing a Specialist
-    in Mathematics (<a href="https://artsci.calendar.utoronto.ca/program/asspe1165">ASSPE1165</a>) and a Minor in
-    Statistics (<a href="https://artsci.calendar.utoronto.ca/program/asmin2289">ASMIN2289</a>). Recently, I worked as a
-    Research Assistant in Statistical Genetics with <a href="http://www.utstat.toronto.edu/sun/">Dr. Lei Sun</a>
-    and <a href="https://www.dlsph.utoronto.ca/faculty-profile/paterson-andrew/">Dr. Andrew Paterson</a> and as a
-    Research Assistant in Mathematics with <a href="https://math.ryerson.ca/~pralat/">Dr. Pawel Pralat</a> and
-    <a href="https://math.ryerson.ca/~konstantinos/index.html">Dr. Konstantinos Georgiou</a>.
+<h2>
+    Quick Links
+</h2>
 
+<p>
+    <ul>
+        <li><a href="https://individual.utoronto.ca">Academic webpage</a></li>
+        <li><a href="files/AntonSugolov_CV.pdf">Curriculum vitae</a></li>
+        <li><a href="https://github.com/sugolov/">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a></li>
+    </ul>
+</p>
+
+<h2>Home</h2>
+<p>
+    Hello, I'm Anton, a second year student at the University of Toronto.
+    I study Mathematics and Statistics, and am interested in Computer Science.
+    I'm interested in understanding dynamical systems, and how seemingly random
+    behaviour can arise from repitition of simple rules.
     <br><br>
-    Please feel free to email me.
+    This winter break I decided to try my hand at learning ML and TensorFlow.
+    I've been following Google's Machine Learning Crash Course and Chollet's Deep Learning with Python.
+    As an exercise, I have been experimenting with training a categorization model using the well studied Iris dataset.
+    I plan to make a blog post about this soon.
+
+
+    <br><br><br><br>
+    Last updated: Dec. 29, 2021
 </p>
 
-<h2>About the Site</h2>
-
-<p>
-    U of T students can claim a free 50 MB on the UTORweb server to host their own site
-    (<a href="http://sites.utoronto.ca/ns/utorweb/">details</a>). This is a nice way to get hosted
-    on the <i>.utoronto</i> domain and to set up a personal site.
-</p>
 
 </body>
 </html>
