--- a/personal.html
+++ b/personal.html
@@ -19,14 +19,22 @@
 </div>
 
 <div class="topnav">
-    <a href="index.html">About</a>
-    <a href="courses.html">Courses</a>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
     <a class="active" href="personal.html">Blog</a>
     <a href="contact.html">Contact</a>
 </div>
 
+
 <h2>
-  Notes
+    Blog
+</h2>
+<p>
+    Will be added to soon.
+</p>
+
+<h2>
+    Notes
 </h2>
 <p>
     Notes that may as well be put here.
@@ -36,13 +44,6 @@
         <a href="files/svkNotes.pdf">(very incomplete) 2021F MAT327, Seifert van Kampen Theorem notes</a>
     </li>
 </ul>
-
-<h2>
-    Blog
-</h2>
-<p>
-    Will be added to soon.
-</p>
 
 <h2>
     Photos
