--- a/contact.html
+++ b/contact.html
@@ -19,18 +19,25 @@
 </div>
 
 <div class="topnav">
-    <a href="index.html">About</a>
-    <a href="courses.html">Courses</a>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
     <a href="personal.html">Blog</a>
     <a class="active" href="contact.html">Contact</a>
 </div>
 
-<h2>Contact Information</h2>
+<h2>
+    Other websites
+</h2>
+<p>
+    More information can be found on my <a href="https://individual.utoronto.ca">academic webpage</a>.
+</p>
+
+<h2>Information</h2>
 
 <p>
     e-Mail me at <b>anton.sugolov[at]mail.utoronto.ca</b>.
     <br><br>
-    Here are my <a href="https://github.com/sugolov/">GitHub</a>,
+    Click for my <a href="https://github.com/sugolov/">GitHub</a>,
     <a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a>, and
     <a href="files/AntonSugolov_CV.pdf">Curriculum Vitae</a>.
 </p>
