--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     Other websites
 </h2>
 <p>
-    More information can be found on my <a href="https://individual.utoronto.ca">academic webpage</a>.
+    More information can be found on my <a href="https://individual.utoronto.ca/asugolov">academic webpage</a>.
 </p>
 
 <h2>Information</h2>
