--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" href="images/favicon.ico">
 <head>
     <meta charset="UTF-8">
-    <title>Anton's Webpage</title>
+    <title>sugolov.github.io</title>
 </head>
 
 <body>
