--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <p>
     <ul>
-        <li><a href="https://individual.utoronto.ca">Academic webpage</a></li>
+        <li><a href="https://individual.utoronto.ca/asugolov">Academic webpage</a></li>
         <li><a href="files/AntonSugolov_CV.pdf">Curriculum vitae</a></li>
         <li><a href="https://github.com/sugolov/">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a></li>
