--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <link href="style.css" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
-    <title>Courses</title>
+    <title>Projects</title>
 </head>
 <body>
 <div class=title>
