update iris info

--- a/projects.html
+++ b/projects.html
@@ -22,11 +22,17 @@
     <a href="contact.html">Contact</a>
 </div>
 
+<p>
+    Click titles to be taken to Git repositories.
+</p>
+
 <h2>
-    (Coming soon) Iris Classification
+    <a href="https://github.com/sugolov/ml-exercises/tree/main/iris">
+        Iris classification
+    </a>
 </h2>
 <p>
-    How to classify some flowers.
+    Classifying iris flower species by their measurements using Keras. More details soon.
 </p>
 
 <h2>
