removed html extension from file names

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<link href="style.css" rel="stylesheet">
-<link rel="icon" href="images/favicon.ico">
+<link href="/sugolov.github.io/style.css" rel="stylesheet">
+<link rel="icon" href="/sugolov.github.io/favicon.ico">
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
@@ -19,10 +19,10 @@
 </div>
 
 <div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="personal.html">Blog</a>
-    <a class="active" href="contact.html">Contact</a>
+    <a href="/sugolov.github.io">Home</a>
+    <a href="/sugolov.github.io/projects">Projects</a>
+    <a href="/sugolov.github.io/blog">Blog</a>
+    <a class="active" href="/sugolov.github.io/contact">Contact</a>
 </div>
 
 <h2>
@@ -39,7 +39,7 @@
     <br><br>
     Click for my <a href="https://github.com/sugolov/">GitHub</a>,
     <a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a>, and
-    <a href="files/AntonSugolov_CV.pdf">Curriculum Vitae</a>.
+    <a href="/sugolov.github.io/blog/files/AntonSugolov_CV.pdf">Curriculum Vitae</a>.
 </p>
 
 
