--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 <html>
-<link rel="icon" href="images/favicon.ico">
-<link href="style.css" rel="stylesheet">
+<link rel="icon" href="/sugolov.github.io/favicon.ico">
+<link href="/sugolov.github.io/style.css" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <title>Projects</title>
@@ -16,10 +16,10 @@
 </div>
 
 <div class="topnav">
-    <a href="index.html">Home</a>
-    <a class="active" href="projects.html">Projects</a>
-    <a href="personal.html">Blog</a>
-    <a href="contact.html">Contact</a>
+    <a href="/sugolov.github.io">Home</a>
+    <a class="active" href="/sugolov.github.io/projects">Projects</a>
+    <a href="/sugolov.github.io/blog">Blog</a>
+    <a href="/sugolov.github.io/contact">Contact</a>
 </div>
 
 <p>
