--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<link href="/sugolov.github.io/style.css" rel="stylesheet">
-<link rel="icon" href="/sugolov.github.io/favicon.ico">
+<link href="/style.css" rel="stylesheet">
+<link rel="icon" href="/favicon.ico">
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
@@ -19,10 +19,10 @@
 </div>
 
 <div class="topnav">
-    <a href="/sugolov.github.io">Home</a>
-    <a href="/sugolov.github.io/projects">Projects</a>
-    <a href="/sugolov.github.io/blog">Blog</a>
-    <a class="active" href="/sugolov.github.io/contact">Contact</a>
+    <a href="../">Home</a>
+    <a href="/projects">Projects</a>
+    <a href="/blog">Blog</a>
+    <a class="active" href="/contact">Contact</a>
 </div>
 
 <h2>
@@ -39,7 +39,7 @@
     <br><br>
     Click for my <a href="https://github.com/sugolov/">GitHub</a>,
     <a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a>, and
-    <a href="/sugolov.github.io/blog/files/AntonSugolov_CV.pdf">Curriculum Vitae</a>.
+    <a href="/blog/files/AntonSugolov_CV.pdf">Curriculum Vitae</a>.
 </p>
 
 
