added bessel teacup

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 
 <h2>
-    Quick Links
+    Links
 </h2>
 
 <p>
@@ -41,7 +41,8 @@
 <h2>Home</h2>
 <p>
     Hello, I'm Anton, a second year student at the University of Toronto.
-    I study Mathematics and Statistics, and am interested in Computer Science.
+    I am pursuing a Mathematics Specialist and Statistics Major.
+    and am interested in Computer Science.
     I'm interested in understanding dynamical systems, and how seemingly random
     behaviour can arise from repitition of simple rules.
     <br><br>
@@ -52,7 +53,7 @@
 
 
     <br><br><br><br>
-    Last updated: Dec. 29, 2021
+    Last updated: May 1st, 2022
 </p>
 
 
