--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <a class="active" href="../">Home</a>
     <a href="/projects">Projects</a>
     <a href="/blog">Blog</a>
-    <a href="/contact">Contact</a>
 </div>
 
 <h2>
@@ -31,7 +30,6 @@
 
 <p>
     <ul>
-        <li><a href="https://individual.utoronto.ca/asugolov">Academic webpage</a></li>
         <li><a href="/blog/files/AntonSugolov_CV.pdf">Curriculum vitae</a></li>
         <li><a href="https://github.com/sugolov/">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a></li>
@@ -40,22 +38,24 @@
 
 <h2>Home</h2>
 <p>
-    Hello, I'm Anton, a second year student at the University of Toronto.
-    I am pursuing a Mathematics Specialist and Statistics Major.
-    and am interested in Computer Science.
-    I'm interested in understanding dynamical systems, and how seemingly random
-    behaviour can arise from repitition of simple rules.
+    Hi, I'm Anton, a second (going into third) year student at the University of Toronto pursuing a Mathematics Specialist
+    and Statistics Major. So far, analysis and geometry have been my favourite subjects. I am also interested in how
+    statistics may be used to understand the behaviour of chaotic dynamical systems.
     <br><br>
-    This winter break I decided to try my hand at learning ML and TensorFlow.
-    I've been following Google's Machine Learning Crash Course and Chollet's Deep Learning with Python.
-    As an exercise, I have been experimenting with training a categorization model using the well studied Iris dataset.
-    I plan to make a blog post about this soon.
-
-
-    <br><br><br><br>
-    Last updated: May 1st, 2022
+    This summer I plan on taking courses, self-studying, and problem solving.
+    <br><br>
+    Feel free to take a look at my blog!
+    <br><br>
+    <i>Last updated: May 1st, 2022</i>
 </p>
-
+<h2>Contact</h2>
+<p>
+    Email me through <b>anton</b> dot <b>sugolov</b> at <b>mail.utoronto.ca</b>.
+    <br><br>
+    Click for my <a href="https://github.com/sugolov/">GitHub</a>,
+    <a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a>, and
+    <a href="/blog/files/AntonSugolov_CV.pdf">Curriculum Vitae</a>.
+</p>
 
 </body>
 </html>
