--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,6 @@
         Projects
     </h1>
     <p align="center">
-        Write-ups of various things.
     </p>
 </div>
 
@@ -19,27 +18,27 @@
     <a href="../">Home</a>
     <a class="active" href="/projects">Projects</a>
     <a href="/blog">Blog</a>
-    <a href="/contact">Contact</a>
 </div>
 
 <p>
-    Click titles to be taken to Git repositories.
+    Titles are clickable.
+</p>
+<h2>
+   <a href="https://github.com/sugolov/GWAS-Workshop">GWAS</a>
+</h2>
+<p>
+    I prepared and lead a workshop about Genome Wide Association Studies. We replicated a sample GWAS that identified the region in the
+    genome significantly associated with ERAP2 gene expression in 1000 Genomes individuals, which was the location of the
+    ERAP2 gene itself. Please see the repository for more details (while this section is expanded)
 </p>
 
 <h2>
-    <a href="https://github.com/sugolov/ml-exercises/tree/main/iris">
-        Iris classification
-    </a>
+    <a href="https://github.com/sugolov/CSC207-Course-Scheduler">U of T Course Scheduling Application</a>
 </h2>
 <p>
-    Classifying iris flower species by their measurements using Keras. More details soon.
-</p>
-
-<h2>
-    (Coming soon) GWAS
-</h2>
-<p>
-    A description of what they are and things I learned.
+    My team's CSC207: Software Design course project. We created a command line application that generates student timetables satisfying
+    user specified criteria. The goal of the project was to follow clean architecture and the SOLID principles
+    of software design.
 </p>
 
 </body>
