--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p>
     <ul>
-        <li><a href="/blog/files/AntonSugolov_CV.pdf">Curriculum vitae</a></li>
+        <li><a href="/blog/files/AntonSugolov_CV.pdf">Curriculum Vitae</a></li>
         <li><a href="https://github.com/sugolov/">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a></li>
     </ul>
@@ -52,9 +52,13 @@
 <p>
     Email me through <b>anton</b> dot <b>sugolov</b> at <b>mail.utoronto.ca</b>.
     <br><br>
-    Click for my <a href="https://github.com/sugolov/">GitHub</a>,
-    <a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a>, and
+    You might find more on my <a href="https://github.com/sugolov/">GitHub</a>,
+    <a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a>, or
     <a href="/blog/files/AntonSugolov_CV.pdf">Curriculum Vitae</a>.
+</p>
+<h2>The Site</h2>
+<p>
+    I like very simple sites. They load quickly and are easy to make.
 </p>
 
 </body>
