--- a/projects/index.html
+++ b/projects/index.html
@@ -11,6 +11,7 @@
         Projects
     </h1>
     <p align="center">
+        Titles are clickable!
     </p>
 </div>
 
@@ -20,9 +21,6 @@
     <a href="/blog">Blog</a>
 </div>
 
-<p>
-    Titles are clickable.
-</p>
 <h2>
    <a href="https://github.com/sugolov/GWAS-Workshop">GWAS</a>
 </h2>
