--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
         Projects
     </h1>
     <p align="center">
-        Titles are clickable!
+        <i>Titles are clickable!</i>
     </p>
 </div>
 
