--- a/index.html
+++ b/index.html
@@ -38,15 +38,13 @@
 
 <h2>Home</h2>
 <p>
-    Hi, I'm Anton, a second (going into third) year student at the University of Toronto pursuing a Mathematics Specialist
+    Hi, I'm Anton, a third year student at the University of Toronto pursuing a Mathematics Specialist
     and Statistics Major. So far, analysis and geometry have been my favourite subjects. I am also interested in how
-    statistics may be used to understand the behaviour of chaotic dynamical systems.
+    probability may be used to understand the behaviour of chaotic dynamical systems.
     <br><br>
-    This summer I plan on taking courses, self-studying, and problem solving.
+    This summer I plan on taking courses, self-studying, and problem solving. Feel free to take a look at my blog!
     <br><br>
-    Feel free to take a look at my blog!
-    <br><br>
-    <i>Last updated: May 1st, 2022</i>
+    <i>Last updated: May 10th, 2022</i>
 </p>
 <h2>Contact</h2>
 <p>
