updated projects and notes

--- a/projects/index.html
+++ b/projects/index.html
@@ -25,18 +25,23 @@
    <a href="https://github.com/sugolov/GWAS-Workshop">GWAS</a>
 </h2>
 <p>
-    I prepared and lead a workshop about Genome Wide Association Studies. We replicated a sample GWAS that identified the region in the
-    genome significantly associated with ERAP2 gene expression in 1000 Genomes individuals, which was the location of the
-    ERAP2 gene itself. Please see the repository for more details (while this section is expanded)
+    We learned how to work with genetic data, statistical tools for GWAS, and later practiced running GWAS independently.
+    Our steps were documented and used to prepare a manual for a GWAS workshop.
+    We later lead the workshop where we conducted a sample GWAS that identified the region in the genome significantly
+    associated with ERAP2 gene expression in a subset of 1000 Genomes individuals.
 </p>
 
 <h2>
-    <a href="https://github.com/sugolov/CSC207-Course-Scheduler">U of T Course Scheduling Application</a>
+    Course Work
 </h2>
 <p>
-    My team's CSC207: Software Design course project. We created a command line application that generates student timetables satisfying
-    user specified criteria. The goal of the project was to follow clean architecture and the SOLID principles
-    of software design.
+    <ul>
+        <li>
+            <a href="https://github.com/sugolov/CSC207-Course-Scheduler">U of T Course Scheduling Application</a>. My team's CSC207: Software Design course project. We created a command line application that generates student timetables satisfying
+            user specified criteria. The goal of the project was to follow clean architecture and the SOLID principles
+            of software design.
+        </li>
+    </ul>
 </p>
 
 </body>
