--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:padding="http://www.w3.org/1999/xhtml">
 <link href="/style.css" rel="stylesheet">
 <link rel="icon" href="/favicon.ico">
 <head>
@@ -38,14 +38,16 @@
 
 <h2>Home</h2>
 <p>
+    <img src="/blog/files/me_n_spivak.jpg" alt="Me n Spivak" align="right" width="300" height="300" padding: 20px 20px 20px 20px/>
     Hi, I'm Anton, a third year student at the University of Toronto pursuing a Mathematics Specialist
-    and Statistics Major. So far, analysis and geometry have been my favourite subjects. I am also interested in how
-    probability may be used to understand the behaviour of chaotic dynamical systems.
+    and Statistics Major. Analysis and geometry have been my favourite subjects so far. I am also looking forward to learning
+    ergodic theory, and how probability can be used to understand dynamical systems.
     <br><br>
     This summer I plan on taking courses, self-studying, and problem solving. Feel free to take a look at my blog!
     <br><br>
-    <i>Last updated: May 10th, 2022</i>
+    <i>Last updated: June 19th, 2022</i>
 </p>
+
 <h2>Contact</h2>
 <p>
     Email me through <b>anton</b> dot <b>sugolov</b> at <b>mail.utoronto.ca</b>.
