--- a/projects/index.html
+++ b/projects/index.html
@@ -21,21 +21,28 @@
     <a href="/blog">Blog</a>
 </div>
 
-<h2>
+<h3>
    <a href="https://github.com/sugolov/GWAS-Workshop">GWAS</a>
-</h2>
+</h3>
 <p>
     We learned how to work with genetic data, statistical tools for GWAS, and later practiced running GWAS independently.
-    Our steps were documented and used to prepare a manual for a GWAS workshop.
-    We later lead the workshop where we conducted a sample GWAS that identified the region in the genome significantly
+    We documented and prepared a manual for using publicly available gene expression data from 1000 Genomes individuals.
+    We later lead a workshop where we conducted a sample GWAS that identified the region in the genome significantly
     associated with ERAP2 gene expression in a subset of 1000 Genomes individuals.
 </p>
 
-<h2>
+<h3>
     Course Work
-</h2>
+</h3>
 <p>
     <ul>
+        <li>
+            <a href="/blog/files/sta302a2.pdf">STA302 Final Project</a>. The final project for STA302: Data Analysis I,
+            which investigates the effect of current smoking status on average systolic blood pressure in a publicly available
+            cross sectional dataset. Includes
+            variable selection, cross validation, assumption checking, prediction on test data, and discussion.
+        </li>
+    <br>
         <li>
             <a href="https://github.com/sugolov/CSC207-Course-Scheduler">U of T Course Scheduling Application</a>. My team's CSC207: Software Design course project. We created a command line application that generates student timetables satisfying
             user specified criteria. The goal of the project was to follow clean architecture and the SOLID principles
