--- a/projects/index.html
+++ b/projects/index.html
@@ -25,10 +25,10 @@
    <a href="https://github.com/sugolov/GWAS-Workshop">GWAS</a>
 </h3>
 <p>
-    We learned how to work with genetic data, statistical tools for GWAS, and later practiced running GWAS independently.
-    We documented and prepared a manual for using publicly available gene expression data from 1000 Genomes individuals.
-    We later lead a workshop where we conducted a sample GWAS that identified the region in the genome significantly
-    associated with ERAP2 gene expression in a subset of 1000 Genomes individuals.
+    Learned how to work with genetic data, statistical tools for GWAS, and later practiced running GWAS independently.
+    Documented and prepared a manual for using publicly available gene expression data from 1000 Genomes individuals.
+    Lead a workshop where we conducted a sample GWAS that identified the region in the genome significantly
+    associated with ERAP2 gene expression in a subset of 1000 Genomes individuals. Wo
 </p>
 
 <h3>
@@ -44,7 +44,7 @@
         </li>
     <br>
         <li>
-            <a href="https://github.com/sugolov/CSC207-Course-Scheduler">U of T Course Scheduling Application</a>. My team's CSC207: Software Design course project. We created a command line application that generates student timetables satisfying
+            <a href="https://github.com/sugolov/CSC207-Course-Scheduler">U of T Course Scheduling Application</a>. The team's CSC207: Software Design course project. We created a command line application that generates student timetables satisfying
             user specified criteria. The goal of the project was to follow clean architecture and the SOLID principles
             of software design.
         </li>
