--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
 <body>
 
 <div class=title>
-    <h1 align=center>
-        sugolov.github.io
-    </h1>
-    <p align=center>
-        <i>Toronto, Ontario</i>
-    </p>
+    <h2 align=center>
+        Anton Sugolov
+    </h2>
 </div>
 
 <div class="topnav">
-    <a class="active" href="../">Home</a>
+    <a href="../">Home</a>
     <a href="/projects">Projects</a>
-    <a href="/blog">Blog</a>
+    <a href="/blog">Posts</a>
 </div>
+
+<h3>About</h3>
+
+<p>
+    I'm a third year Mathematics specialist, Statistics major student at the University of Toronto, interested in
+    PDE, analysis, applied math and machine learning.
+</p>
+
 
 <h3>
     Links
@@ -30,35 +35,17 @@
 
 <p>
     <ul>
-        <li><a href="/blog/files/AntonSugolov_CV.pdf">Curriculum Vitae</a></li>
+        <li><a href="/blog/files/Sugolov, Anton - Resume.pdf">Resume</a></li>
         <li><a href="https://github.com/sugolov/">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a></li>
+        <li><a href="/blog/posts/course_list">Courses</a></li>
     </ul>
 </p>
 
-<h3>Home</h3>
-<p>
-    <!--
-        <img src="/blog/files/me_n_spivak.jpg" alt="Me n Spivak" align="right" width="300" height="300" padding: 20px 20px 20px 20px/>
-    -->
-    Hi, I'm Anton, a third year student at the University of Toronto pursuing a Mathematics Specialist
-    and Statistics Major. Analysis and geometry have been my favourite subjects so far. I am also looking forward to learning
-    ergodic theory, and how probability can be used to understand dynamical systems.
-    <br><br>
-    This summer I plan on taking courses, self-studying, and problem solving. Feel free to take a look at my blog!
-    <br><br>
-</p>
 
 <h3>Contact</h3>
 <p>
-    Email me through <b>anton</b> dot <b>sugolov</b> at <b>mail.utoronto.ca</b>.
-    You might find more on my <a href="https://github.com/sugolov/">GitHub</a>,
-    <a href="https://www.linkedin.com/in/anton-sugolov">LinkedIn</a>, or
-    <a href="/blog/files/AntonSugolov_CV.pdf">Curriculum Vitae</a>.
-</p>
-<h3>The Site</h3>
-<p>
-    I like very simple sites. They load quickly and are easy to make.
+    Email me: anton dot sugolov at mail.utoronto.ca.
 </p>
 
 </body>
