--- a/projects/index.html
+++ b/projects/index.html
@@ -7,32 +7,34 @@
 </head>
 <body>
 <div class=title>
-    <h1 align=center>
+    <h2 align=center>
         Projects
-    </h1>
-    <p align="center">
-        <i>Titles are clickable!</i>
-    </p>
+    </h2>
 </div>
 
 <div class="topnav">
     <a href="../">Home</a>
-    <a class="active" href="/projects">Projects</a>
-    <a href="/blog">Blog</a>
+    <a href="/projects">Projects</a>
+    <a href="/blog">Posts</a>
 </div>
 
 <h3>
    <a href="https://github.com/sugolov/GWAS-Workshop">GWAS</a>
 </h3>
+<ul>
+    <li>
+        <a href="https://www.biorxiv.org/content/10.1101/2022.09.03.506492v1">bioRXiv</a>
+    </li>
+</ul>
 <p>
     Learned how to work with genetic data, statistical tools for GWAS, and later practiced running GWAS independently.
     Documented and prepared a manual for using publicly available gene expression data from 1000 Genomes individuals.
     Lead a workshop where we conducted a sample GWAS that identified the region in the genome significantly
-    associated with ERAP2 gene expression in a subset of 1000 Genomes individuals. Wo
+    associated with ERAP2 gene expression in a subset of 1000 Genomes individuals.
 </p>
 
 <h3>
-    Course Work
+    Course Projects
 </h3>
 <p>
     <ul>
