--- a/courses/index.html
+++ b/courses/index.html
@@ -59,6 +59,17 @@
 </ul>
 <h2 id="coursework">Coursework</h2>
 <p>All the courses that I have taken or am taking during my time at U of T. Course texts included.</p>
+<h3 id="fall-and-winter-2023-2024">Fall and Winter 2023-2024</h3>
+<ul>
+<li><a href="https://artsci.calendar.utoronto.ca/course/mat457h1">MAT457</a>: Advanced Real Analysis I</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/mat458h1">MAT458</a>: Advanced Real Analysis II</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/mat477h1">MAT477</a>: Seminar in Mathematics</li>
+<li><a href="https://www.mathematics.utoronto.ca/graduate/curriculum-courses/course-descriptions-2022-23#MAT1510HF">MAT1510</a>: Deep Learning: Theory &amp; Data Science</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/apm421h1">APM421</a>: Mathematical Foundations of Quantum Mechanics and Quantum Information Theory</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/apm462h1">APM462</a>: Nonlinear Optimization</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/apm466h1">APM466</a>: Foundations of Mathematical Finance</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/sta414h1">STA414</a>: Statistical Methods for Machine Learning II</li>
+</ul>
 <h3 id="mathematics">Mathematics</h3>
 <ul>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat377h1">MAT377</a>: Mathematical Probability
@@ -130,6 +141,7 @@
 </ul>
 <h3 id="statistics">Statistics</h3>
 <ul>
+<li><a href="https://artsci.calendar.utoronto.ca/course/sta457h1">STA457</a>: Time Series Analysis</li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/sta314h1">STA314</a>: Statistical Methods for Machine Learning
 <ul>
 <li>G. James, D. Witten, T. Hastie, and R. Tibshirani: <em>Introduction to Statistical Learning</em></li>
