--- a/courses/index.html
+++ b/courses/index.html
@@ -138,56 +138,77 @@
 <h2 id="complete-coursework">Complete coursework</h2>
 <h4 id="fall-and-winter-2023-2024">Fall and Winter 2023-2024</h4>
 <ul>
-<li><a href="https://artsci.calendar.utoronto.ca/course/mat457h1">MAT457</a>: Advanced Real Analysis I</li>
-<li><a href="https://artsci.calendar.utoronto.ca/course/mat458h1">MAT458</a>: Advanced Real Analysis II</li>
-<li><a href="https://artsci.calendar.utoronto.ca/course/mat477h1">MAT477</a>: Seminar in Mathematics</li>
-<li><a href="https://www.mathematics.utoronto.ca/graduate/curriculum-courses/course-descriptions-2022-23#MAT1510HF">MAT1510</a>: Deep Learning: Theory &amp; Data Science</li>
-<li><a href="https://artsci.calendar.utoronto.ca/course/apm421h1">APM421</a>: Mathematical Foundations of Quantum Mechanics and Quantum Information Theory</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/mat457h1">MAT457</a>: Advanced Real Analysis I
+<ul>
+<li>G. Folland, <em>Real Analysis</em></li>
+</ul>
+</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/mat458h1">MAT458</a>: Advanced Real Analysis II
+<ul>
+<li>G. Folland, <em>Real Analysis</em></li>
+</ul>
+</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/mat477h1">MAT477</a>: Seminar in Mathematics
+<ul>
+<li>Discrete Riemann Surfaces based on works of R. Kenyon, C. Mercat, L. Lovasz, D. Cimasoni, S. Smirnov, A. Bobenko and M. Skopenkov.</li>
+</ul>
+</li>
+<li><a href="https://www.mathematics.utoronto.ca/graduate/curriculum-courses/course-descriptions-2022-23#MAT1510HF">MAT1510</a>: Deep Learning: Theory &amp; Data Science
+<ul>
+<li><a href="https://sites.google.com/view/mat1510">Course webpage</a></li>
+</ul>
+</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/apm421h1">APM421</a>: Mathematical Foundations of Quantum Mechanics and Quantum Information Theory
+<ul>
+<li>M. Sigal, <em>Mathematical Concepts of Quantum Mechanics</em></li>
+</ul>
+</li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/apm462h1">APM462</a>: Nonlinear Optimization</li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/apm466h1">APM466</a>: Foundations of Mathematical Finance</li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/sta414h1">STA414</a>: Statistical Methods for Machine Learning II</li>
+<li><a href="https://artsci.calendar.utoronto.ca/course/csc466h1">CSC466</a>: Numerical Methods for Optimization Problems</li>
 </ul>
 <h4 id="mathematics">Mathematics</h4>
 <ul>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat377h1">MAT377</a>: Mathematical Probability
 <ul>
-<li>D. Panchenko: <em>Introduction to Probability Theory</em></li>
+<li>D. Panchenko, <em>Introduction to Probability Theory</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat367h1">MAT367</a>: Differential Geometry
 <ul>
-<li>M. Spivak: <em>A Comprehensive Introduction to Differential Geometry, Vol. 1</em></li>
+<li>M. Spivak, <em>A Comprehensive Introduction to Differential Geometry, Vol. 1</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat357h1">MAT357</a>: Foundations of Real Analysis
 <ul>
-<li>C. Pugh: <em>Real Mathematical Analysis</em></li>
+<li>C. Pugh, <em>Real Mathematical Analysis</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat354h1">MAT354</a>: Complex Analysis I
 <ul>
-<li>L. Ahlfors: <em>Complex Analysis</em></li>
-<li>H. Cartan: <em>Elementary Theory of Analytic Functions of One Or Several Complex Variables</em></li>
+<li>L. Ahlfors, <em>Complex Analysis</em></li>
+<li>H. Cartan, <em>Elementary Theory of Analytic Functions of One Or Several Complex Variables</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat351y1">MAT351</a>: Partial Differential Equations
 <ul>
-<li>W. Strauss: <em>Partial Differential Equations: An Introduction</em></li>
+<li>W. Strauss, <em>Partial Differential Equations: An Introduction</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat344h1">MAT344</a>: Introduction to Combinatorics
 <ul>
-<li>M. Kelle and T. Trotter: <em>Applied Combinatorics</em></li>
+<li>M. Kelle and T. Trotter, <em>Applied Combinatorics</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat327h1">MAT327</a>: Introduction to Topology
 <ul>
-<li>J. Munkres: <em>Topology</em></li>
+<li>J. Munkres, <em>Topology</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat315h1">MAT315</a>: Introduction to Number Theory
 <ul>
-<li>G. Jones and M. Jones: <em>Elementary Number Theory</em></li>
+<li>G. Jones and M. Jones, <em>Elementary Number Theory</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat267h1">MAT267</a>: Advanced Ordinary Differential Equations
@@ -197,22 +218,22 @@
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat257y1">MAT257</a>: Analysis II
 <ul>
-<li>M. Spivak: <em>Calculus on Manifolds</em></li>
+<li>M. Spivak, <em>Calculus on Manifolds</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat247h1">MAT247</a>: Algebra II
 <ul>
-<li>S. Axler: <em>Linear Algebra Done Right</em></li>
+<li>S. Axler, <em>Linear Algebra Done Right</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat240h1">MAT240</a>: Algebra I
 <ul>
-<li>S. Axler: <em>Linear Algebra Done Right</em></li>
+<li>S. Axler, <em>Linear Algebra Done Right</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/mat157y1">MAT157</a>: Analysis I
 <ul>
-<li>M. Spivak: <em>Calculus</em></li>
+<li>M. Spivak, <em>Calculus</em></li>
 </ul>
 </li>
 </ul>
@@ -221,7 +242,7 @@
 <li><a href="https://artsci.calendar.utoronto.ca/course/sta457h1">STA457</a>: Time Series Analysis</li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/sta314h1">STA314</a>: Statistical Methods for Machine Learning
 <ul>
-<li>G. James, D. Witten, T. Hastie, and R. Tibshirani: <em>Introduction to Statistical Learning</em></li>
+<li>G. James, D. Witten, T. Hastie, and R. Tibshirani, <em>Introduction to Statistical Learning</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/sta304h1">STA304</a>: Surveys, Sampling, and Observational Data</li>
@@ -240,12 +261,12 @@
 <li><a href="https://artsci.calendar.utoronto.ca/course/chm151y1">CHM151</a>: Introduction to Chemistry</li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/lat102h1">LAT102</a>: Latin II
 <ul>
-<li>F. Moreland and R. Fleischer: <em>Latin: An Intensive Course</em></li>
+<li>F. Moreland and R. Fleischer, <em>Latin: An Intensive Course</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/lat101h1">LAT101</a>: Latin I
 <ul>
-<li>F. Moreland and R. Fleischer: <em>Latin: An Intensive Course</em></li>
+<li>F. Moreland and R. Fleischer, <em>Latin: An Intensive Course</em></li>
 </ul>
 </li>
 <li><a href="https://artsci.calendar.utoronto.ca/course/lin200h1">LIN200</a>: Introduction to Language</li>
