--- a/courses/index.html
+++ b/courses/index.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1"><title>Courses - Anton S.</title>
-<meta property="og:title" content="Courses - Anton S.">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1"><title>Courses - sugolov.ca</title>
+<meta property="og:title" content="Courses - sugolov.ca">
 <meta property="og:type" content="article">
 
 
@@ -37,7 +37,7 @@
   <div class="container flex flex-wrap justify-between items-center mx-auto">
     <div class="nav-main my-2.5">
       <a href="https://sugolov.ca/" class="nav-title py-2.5 text-2xl
-               text-zinc-600 dark:text-zinc-300 hover:border-b-0">Anton S.</a>
+               text-zinc-600 dark:text-zinc-300 hover:border-b-0">sugolov.ca</a>
     </div>
     <button type="button"
             onclick="toggleMenu()"
