--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <ul>
                             <li class="document-item">
                                 <a href="posts/test/index.html">A blog post</a>
-                                <span class="date">Nov 17, 2024</span>
+                                <span class="date">Nov 18, 2024</span>
                             </li>
                         </ul>
                     </div>
@@ -276,7 +276,7 @@
                             <h3>Introduction to the Otto Calculus</h3>
                             <div class="project-meta">
                                 <i data-lucide="book"></i> MAT1855: Mathematical Problems in Economics
-                                <span class="date">Spring 2024</span>
+                                <span class="date">Fall 2024</span>
                             </div>
                             <p>Described the machinery and original development of the Otto calculus. Mentioned applications to stochastic processes and statistical inference.</p>
                             <div class="project-links">
