--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                 <span class="date">Fall 2023</span>
                             </div>
                             <p>
-                                Topics course project on "<a href="https://arxiv.org/abs/2305.05465">The emergence of clusters in self-attention dynamics</a>" (2023) by Geshkovski et al. 
+                                Topics course project on "<a href="https://arxiv.org/abs/2305.05465">The emergence of clusters in self-attention dynamics</a>" by Geshkovski et al. (2023). 
                                 Implemented additional tests for the case of multihead attention and presented a small result about attention head eigenvalue.
                             </p>
                             <div class="project-links">
