--- a/otto/index.html
+++ b/otto/index.html
@@ -73,7 +73,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
 <body>
-    <a href="index.html" class="nav-link">← Back to Home</a>
+    <a href="../index.html" class="nav-link">← home</a>
     
     <h1>Introduction to the Otto Calculus</h1>
 
