--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anton Sugolov</title>
+    <title>sugolov.github.io</title>
     <style>
         body {
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;  /* This is the line that changed */
@@ -90,11 +90,11 @@
 
         .email {
             font-family: monospace;
-            color: #666;
+            color: #333;
         }
 
         .section {
-            margin-bottom: 3rem;
+            margin-bottom: 1rem;
         }
 
         @media (max-width: 600px) {
@@ -129,21 +129,19 @@
                     I'm interested in all things probability, statistics, and machine learning. 
                     
                     Let's keep in touch!
-                <br>
-                <span class="email">asugolov[at]gmail[dot]com</span>
+                    <br><br>
+                    <span class="email">asugolov[at]gmail[dot]com</span>
                 </p>
             </div>
         </div>
-        
-        <img src="files/profile.png" alt="Anton Sugolov" class="headshot">
+        <img src="files/profile.png" alt="me" class="headshot">
     </div>
-
     <div class="section">
         <h2>projects</h2>
         <ul class="list-items">
             <li class="list-item">
                 <span class="date">2024/04/03</span>
-                <a href="otto" class="link">Introduction to the Otto Calculus</a>
+                <a href="projects/otto" class="link">Introduction to the Otto Calculus</a>
             </li>
         </ul>
     </div>
