--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </p>
             </div>
         </div>
-        <img src="files/profile.png" alt="me" class="headshot">
+        <img src="files/profile3.png" alt="me" class="headshot">
     </div>
     <div class="section">
         <h2>projects</h2>
