--- a/index.html
+++ b/index.html
@@ -4,118 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sugolov.github.io</title>
-    <style>
-        body {
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;  /* This is the line that changed */
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            color: #333;
-        }
-
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            margin-bottom: 3rem;
-            gap: 2rem;
-        }
-
-        .content {
-            flex: 1;
-        }
-
-        .headshot {
-            width: 250px;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 4px;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
-            font-weight: normal;
-            margin-top: 0;
-        }
-
-        h2 {
-            font-size: 1.5rem;
-            margin-top: 2rem;
-            font-weight: normal;
-        }
-
-        .contact-links {
-            margin-bottom: 2rem;
-        }
-
-        .contact-links a {
-            color: #333;
-            text-decoration: none;
-            margin-right: 1.5rem;
-        }
-
-        .contact-links a:hover {
-            text-decoration: underline;
-        }
-
-        .list-items {
-            list-style: none;
-            padding: 0;
-        }
-
-        .list-item {
-            margin-bottom: 1rem;
-            display: flex;
-            align-items: baseline;
-        }
-
-        .date {
-            color: #666;
-            font-family: monospace;
-            margin-right: 1rem;
-            flex-shrink: 0;
-            width: 100px;
-        }
-
-        .link {
-            color: #333;
-            text-decoration: none;
-        }
-
-        .link:hover {
-            text-decoration: underline;
-        }
-
-        .email {
-            font-family: monospace;
-            color: #333;
-        }
-
-        .section {
-            margin-bottom: 1rem;
-        }
-
-        @media (max-width: 600px) {
-            .header {
-                flex-direction: column-reverse;
-                align-items: center;
-            }
-
-            .headshot {
-                margin-bottom: 1rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
         <div class="content">
-            <h1>sugolov.github.io</h1>
+            <h1>Anton Sugolov</h1>
             
             <div class="contact-links">
-                <a href="blog">blog</a>
+                <a href="blog" >blog</a>
                 <a href="https://github.com/sugolov">github</a>
                 <a href="https://twitter.com/suganton">twitter</a>
                 <a href="https://scholar.google.com/citations?user=LSobBYoAAAAJ">scholar</a>
@@ -125,9 +22,9 @@
             <div class="section">
                 <h2>info</h2>
                 <p>
-                    Hello! I'm Anton.  Currently, I'm a Math MSc. Student at University of Toronto, supervised by Prof. Vardan Papyan.
-                    I'm interested in all things probability, statistics, and machine learning. 
-                    
+                    Hello! I'm Anton. I'm interested in all things probability, statistics, and machine learning. 
+                    Currently, I'm a Math MSc. Student at University of Toronto, supervised by Prof. Vardan Papyan.
+                    <br>
                     Let's keep in touch!
                     <br><br>
                     <span class="email">asugolov[at]gmail[dot]com</span>
@@ -140,8 +37,12 @@
         <h2>projects</h2>
         <ul class="list-items">
             <li class="list-item">
-                <span class="date">2024/04/03</span>
-                <a href="projects/otto" class="link">Introduction to the Otto Calculus</a>
+                <span class="date">2024/03/01</span>
+                <a href="projects/transformer-block-coupling/" class="link">Transformer Block Coupling (ICLR 2025)</a>
+            </li>
+            <li class="list-item">
+                <span class="date">2024/11/30</span>
+                <a href="projects/otto/" class="link">Introduction to the Otto Calculus</a>
             </li>
         </ul>
     </div>
